.provarCaches/00D6C0000000xA6UAI/objects/redwing__RichText__c.object
<CustomObject>
    <fields>
        <fullName>Dev_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>Dev External ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>redwing__Hide_Topics__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Hide sidebar topics in rich text viewer</inlineHelpText>
        <label>Hide Topics</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>redwing__Learning__c</fullName>
        <label>Learning</label>
        <referenceTo>redwing__Learning__c</referenceTo>
        <relationshipLabel>Rich Text</relationshipLabel>
        <relationshipName>RichTexts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <label>Rich Text</label>
    <nameField>
        <label>Rich Text Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rich Text</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>